--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@marketplace/server",
+  "name": "@tantovale/server",
   "version": "0.1.0",
   "private": true,
   "exports": {
@@ -16,8 +16,8 @@
     "hono": "^4.6.17"
   },
   "devDependencies": {
-    "@marketplace/eslint-config": "workspace:*",
-    "@marketplace/typescript-config": "workspace:*",
+    "@tantovale/eslint-config": "workspace:*",
+    "@tantovale/typescript-config": "workspace:*",
     "@types/node": "^20.11.17",
     "tsx": "^4.7.1"
   }
