--- a/apps/storefront/tsconfig.json
+++ b/apps/storefront/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "@marketplace/typescript-config/nextjs.json",
+  "extends": "@tantovale/typescript-config/nextjs.json",
   "compilerOptions": {
     "plugins": [
       {
@@ -12,7 +12,12 @@
     "**/*.tsx",
     "next-env.d.ts",
     "next.config.js",
-    ".next/types/**/*.ts"
+    ".next/types/**/*.ts",
+    "tailwind.config.js",
+    "postcss.config.mjs",
+    "eslint.config.mjs",
+    "prettier.config.mjs",
+    "envConfig.mjs"
   ],
   "exclude": ["node_modules"]
 }
