--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,9 +1,12 @@
 {
-  "name": "@marketplace/ui",
+  "name": "@tantovale/ui",
   "version": "0.1.0",
   "private": true,
   "exports": {
-    "./button": "./src/button.tsx"
+    "./button": "./src/button.tsx",
+    "./css": "./src/globals.css",
+    "./tailwind.config": "./tailwind.config.js",
+    "./postcss.config": "./postcss.config.mjs"
   },
   "scripts": {
     "lint": "eslint . --max-warnings 0",
@@ -11,8 +14,8 @@
     "check-types": "tsc --noEmit"
   },
   "devDependencies": {
-    "@marketplace/eslint-config": "workspace:*",
-    "@marketplace/typescript-config": "workspace:*",
+    "@tantovale/eslint-config": "workspace:*",
+    "@tantovale/typescript-config": "workspace:*",
     "@turbo/gen": "^1.12.4",
     "@types/node": "^20.11.24",
     "@types/react": "18.3.0",
@@ -20,7 +23,11 @@
     "typescript": "5.5.4"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.0.0",
+    "postcss": "^8.5.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "tailwind": "^4.0.0",
+    "tailwindcss": "^4.0.0"
   }
 }
