--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -1,8 +1,13 @@
 {
-  "extends": "@marketplace/typescript-config/react-library.json",
+  "extends": "@tantovale/typescript-config/react-library.json",
   "compilerOptions": {
     "outDir": "dist"
   },
-  "include": ["src"],
+  "include": [
+    "src",
+    "tailwind.config.js",
+    "postcss.config.mjs",
+    "prettier.config.mjs"
+  ],
   "exclude": ["node_modules", "dist"]
 }
