--- a/apps/server/tsconfig.json
+++ b/apps/server/tsconfig.json
@@ -1,9 +1,8 @@
 {
+  "extends": "@tantovale/typescript-config/base.json",
   "compilerOptions": {
     "target": "ESNext",
-    "module": "NodeNext",
     "moduleResolution": "bundler",
-    "strict": true,
     "verbatimModuleSyntax": true,
     "skipLibCheck": true,
     "types": ["node"],
