--- a/apps/storefront/package.json
+++ b/apps/storefront/package.json
@@ -1,11 +1,12 @@
 {
   "name": "@tantovale/storefront",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "type": "module",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack --port 3000",
-    "build": "next build",
+    "build": "cd ../../ && turbo run build:next --filter=@tantovale/storefront",
+    "build:next": "next build",
     "start": "next start",
     "lint": "next lint --max-warnings 0",
     "check-types": "tsc --noEmit"
