--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -2,6 +2,9 @@
   "name": "@tantovale/ui",
   "version": "0.1.0",
   "private": true,
+  "sideEffects": false,
+  "main": "./src",
+  "type": "module",
   "exports": {
     "./button": "./src/button.tsx",
     "./css": "./src/globals.css",
@@ -23,11 +26,11 @@
     "typescript": "5.5.4"
   },
   "dependencies": {
-    "@tailwindcss/postcss": "^4.0.0",
-    "postcss": "^8.5.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwind": "^4.0.0",
-    "tailwindcss": "^4.0.0"
+    "tailwindcss": "^4.0.0",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.5.1",
+    "@tailwindcss/postcss": "^4.0.0"
   }
 }
