--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -1,13 +1,12 @@
 {
   "extends": "@tantovale/typescript-config/react-library.json",
   "compilerOptions": {
-    "outDir": "dist"
+    "module": "NodeNext",
+    "moduleResolution": "bundler",
+    "outDir": "dist",
+    "declaration": true,
+    "esModuleInterop": true
   },
-  "include": [
-    "src",
-    "tailwind.config.js",
-    "postcss.config.mjs",
-    "prettier.config.mjs"
-  ],
-  "exclude": ["node_modules", "dist"]
+  "include": [".", "src"],
+  "exclude": ["dist", "build", "node_modules"]
 }
