--- a/compose.yml
+++ b/compose.yml
@@ -11,16 +11,16 @@ services:
     networks:
       - app_network
 
-  # server:
-  #   container_name: tv_server
-  #   build:
-  #     context: .
-  #     dockerfile: ./apps/server/Dockerfile
-  #   restart: unless-stopped
-  #   ports:
-  #     - 3001:3001
-  #   networks:
-  #     - app_network
+  server:
+    container_name: tv_server
+    build:
+      context: .
+      dockerfile: ./apps/server/Dockerfile
+    restart: unless-stopped
+    ports:
+      - 4000:4000
+    networks:
+      - app_network
 
 networks:
   app_network:
