feat: create database package

--- a/apps/server/Dockerfile
+++ b/apps/server/Dockerfile
@@ -1,35 +1,27 @@
 # Base stage: Use official Node.js alpine image
-FROM node:23-alpine AS base
+FROM node:18-alpine AS base
 
 # Install necessary system dependencies
 RUN apk add --no-cache libc6-compat bash curl
-
-# Install pnpm globally using npm
-RUN npm install -g pnpm
 
 # Build stage
 FROM base AS builder
 WORKDIR /app
 
-# Set environment variables for pnpm and PATH
-ENV PNPM_HOME=/root/.local/share/pnpm
-ENV PATH=$PNPM_HOME:$PATH
-
 # Install turbo globally
-RUN pnpm add -g turbo
+RUN npm install -g turbo
 
 # Copy essential files for dependency installation
-COPY pnpm-lock.yaml .
+COPY package-lock.json .
 COPY package.json .
 COPY turbo.json .
 COPY apps/server/package.json ./apps/server/
 
-# Fetch and install dependencies with caching
-RUN pnpm fetch
-COPY . .
-RUN pnpm install --offline
+# Install dependencies
+RUN npm ci
 
 # Build the Hono.js application
+COPY . .
 RUN npx turbo run build:hono --filter=@tantovale/server
 
 # Production stage
@@ -53,4 +45,4 @@ ENV PORT 4000
 ENV HOSTNAME 0.0.0.0
 
 # Run the server
-CMD ["node", "dist/index.js"]
+CMD ["node", "apps/server/dist/index.js"]
