--- a/apps/server/tsconfig.json
+++ b/apps/server/tsconfig.json
@@ -10,6 +10,6 @@
     "jsx": "react-jsx",
     "jsxImportSource": "hono/jsx"
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "../../drizzle.config.ts"],
   "exclude": ["node_modules"]
 }
