--- a/apps/storefront/Dockerfile
+++ b/apps/storefront/Dockerfile
@@ -1,30 +1,27 @@
 # Use official Node.js alpine image as base
-FROM node:22-alpine AS base
+FROM node:18-alpine AS base
 
-RUN apk add --no-cache libc6-compat bash curl && \
-    curl -fsSL https://get.pnpm.io/v6.16.js | node - add --global pnpm
+# Install necessary system dependencies
+RUN apk add --no-cache libc6-compat bash curl
 
 # Build stage
 FROM base AS builder
 WORKDIR /app
 
-ENV PNPM_HOME=/root/.local/share/pnpm
-ENV PATH=$PNPM_HOME:$PATH
-
-RUN pnpm add -g turbo
+# Install turbo globally
+RUN npm install -g turbo
 
 # Copy only necessary files for dependency installation
-COPY pnpm-lock.yaml .
+COPY package-lock.json .
 COPY package.json .
 COPY turbo.json .
 COPY apps/storefront/package.json ./apps/storefront/
 
-# Install dependencies with caching
-RUN pnpm fetch
-COPY . .
-RUN pnpm install --offline
+# Install dependencies
+RUN npm ci
 
 # Build the application
+COPY . .
 RUN npx turbo run build:next --filter=@tantovale/storefront
 
 # Production stage
@@ -37,7 +34,6 @@ RUN addgroup --system --gid 1001 nodejs && \
 
 # Copy only necessary files for runtime
 COPY --from=builder --chown=nextjs:nodejs /app/apps/storefront/package.json ./
-
 COPY --from=builder --chown=nextjs:nodejs /app/apps/storefront/public ./public
 COPY --from=builder --chown=nextjs:nodejs /app/apps/storefront/next.config.js ./
 COPY --from=builder --chown=nextjs:nodejs /app/apps/storefront/.next/standalone ./
@@ -45,6 +41,7 @@ COPY --from=builder --chown=nextjs:nodejs /app/apps/storefront/.next/static ./.n
 
 # Set user and runtime configurations
 USER nextjs
+
 EXPOSE 3000
 ENV PORT 3000
 ENV HOSTNAME 0.0.0.0
