--- a/turbo.json
+++ b/turbo.json
@@ -26,6 +26,15 @@
 		"dev": {
 			"cache": false,
 			"persistent": true
+		},
+		"db:check": {
+			"cache": false
+		},
+		"db:generate": {
+			"cache": false
+		},
+		"db:migrate": {
+			"cache": false
 		}
 	}
 }
