--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 	"devDependencies": {
 		"@commitlint/cli": "^19.6.1",
 		"@commitlint/config-conventional": "^19.6.0",
+		"dotenv-cli": "^8.0.0",
 		"husky": "^9.1.7",
 		"prettier": "^3.2.5",
 		"turbo": "^2.3.3",
