--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -13,11 +13,13 @@
   "dependencies": {
     "@hono/node-server": "^1.13.7",
     "@hono/zod-validator": "^0.4.2",
+    "bcrypt": "^5.1.1",
     "hono": "^4.6.17"
   },
   "devDependencies": {
     "@tantovale/eslint-config": "*",
     "@tantovale/typescript-config": "*",
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20.11.17",
     "@types/pg": "^8.11.11",
     "tsx": "^4.19.2"
