--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@hono/node-server": "^1.13.7",
     "@hono/zod-validator": "^0.4.2",
+    "@node-rs/argon2": "^2.0.2",
     "bcrypt": "^5.1.1",
     "hono": "^4.6.17"
   },
