--- a/apps/storefront/package.json
+++ b/apps/storefront/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "next:dev": "next dev --turbopack --port 3000",
+    "dev": "next dev",
     "next:build": "next build",
     "start": "next start",
     "lint": "next lint --max-warnings 0",
@@ -13,9 +14,10 @@
   "dependencies": {
     "@icons-pack/react-simple-icons": "^11.2.0",
     "@radix-ui/react-slot": "^1.1.1",
-    "@tailwindcss/postcss": "^4.0.0",
+    "@tailwindcss/postcss": "^4.0.1",
     "@tanstack/react-query": "^5.64.2",
     "@tantovale/server": "*",
+    "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.474.0",
@@ -24,13 +26,14 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^2.6.0",
-    "tailwindcss": "^4.0.0",
+    "tailwindcss": "^4.0.1",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.64.2",
     "@tantovale/eslint-config": "*",
     "@tantovale/typescript-config": "*",
+    "@tantovale/ui": "*",
     "@types/node": "^20",
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.0",
