--- a/apps/storefront/package.json
+++ b/apps/storefront/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@tantovale/storefront",
+  "name": "@workspace/storefront",
   "version": "1.0.0",
   "private": true,
   "type": "module",
@@ -14,9 +14,10 @@
   "dependencies": {
     "@icons-pack/react-simple-icons": "^11.2.0",
     "@radix-ui/react-slot": "^1.1.1",
+    "@tailwindcss/cli": "^4.0.1",
     "@tailwindcss/postcss": "^4.0.1",
     "@tanstack/react-query": "^5.64.2",
-    "@tantovale/server": "*",
+    "@workspace/server": "*",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -31,12 +32,12 @@
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.64.2",
-    "@tantovale/eslint-config": "*",
-    "@tantovale/typescript-config": "*",
-    "@tantovale/ui": "*",
     "@types/node": "^20",
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.0",
+    "@workspace/eslint-config": "*",
+    "@workspace/typescript-config": "*",
+    "@workspace/ui": "*",
     "typescript": "5.5.4"
   }
 }
