--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,28 +1,30 @@
 {
-	"name": "@tantovale/ui",
+	"name": "@workspace/ui",
 	"private": true,
 	"version": "1.0.0",
 	"type": "module",
 	"scripts": {
-		"shadcn": "npx shadcn@latest"
+		"shadcn": "npx shadcn@canary"
 	},
 	"exports": {
 		"./components/*": "./src/components/*.tsx",
 		"./hooks/*": "./src/hooks/*.ts",
 		"./lib/*": "./src/lib/*.ts",
-		"./types/*": "./src/types/*.ts",
-		"./views/*": "./src/views/*.tsx",
 		"./globals.css": "./src/styles/globals.css",
 		"./postcss.config": "./postcss.config.mjs",
 		"./tailwind.config": "./tailwind.config.ts"
 	},
 	"dependencies": {
+		"@radix-ui/react-accordion": "^1.2.2",
+		"@radix-ui/react-dropdown-menu": "^2.1.5",
 		"@radix-ui/react-slot": "^1.1.1",
+		"@tailwindcss/cli": "^4.0.1",
 		"@tailwindcss/postcss": "^4.0.1",
 		"autoprefixer": "^10.4.20",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"lucide-react": "^0.474.0",
+		"next-themes": "^0.4.4",
 		"postcss": "^8.5.1",
 		"tailwind-merge": "^2.6.0",
 		"tailwindcss": "^4.0.1",
