--- a/turbo.json
+++ b/turbo.json
@@ -28,7 +28,7 @@
 		"build": {
 			"dependsOn": ["^build", "db:generate"],
 			"inputs": ["$TURBO_DEFAULT$", ".env*"],
-			"outputs": [".next/**", "!.next/cache/**", ".vercel/output/**"]
+			"outputs": [".next/**", "dist/**", "!.next/cache/**", ".vercel/output/**"]
 		},
 		"hono:dev": {
 			"dependsOn": ["db:push"],
