--- a/apps/storefront/package.json
+++ b/apps/storefront/package.json
@@ -12,32 +12,24 @@
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
-    "@icons-pack/react-simple-icons": "^11.2.0",
-    "@radix-ui/react-slot": "^1.1.1",
-    "@tailwindcss/cli": "^4.0.1",
-    "@tailwindcss/postcss": "^4.0.1",
-    "@tanstack/react-query": "^5.64.2",
+    "@workspace/ui": "",
     "@workspace/server": "*",
-    "autoprefixer": "^10.4.20",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "lucide-react": "^0.474.0",
+    "@tanstack/react-query": "^5.64.2",
+    "lucide-react": "0.456.0",
+    "next-themes": "^0.4.3",
     "next": "^15.1.0",
-    "postcss": "^8.5.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "tailwind-merge": "^2.6.0",
-    "tailwindcss": "^4.0.1",
-    "tailwindcss-animate": "^1.0.7"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
+    "@workspace/eslint-config": "*",
+    "@workspace/typescript-config": "*",
     "@tanstack/eslint-plugin-query": "^5.64.2",
     "@types/node": "^20",
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.0",
-    "@workspace/eslint-config": "*",
-    "@workspace/typescript-config": "*",
-    "@workspace/ui": "*",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
     "typescript": "5.5.4"
   }
 }
