--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -4,30 +4,41 @@
 	"version": "1.0.0",
 	"type": "module",
 	"scripts": {
-		"shadcn": "npx shadcn@canary"
-	},
-	"exports": {
-		"./components/*": "./src/components/*.tsx",
-		"./hooks/*": "./src/hooks/*.ts",
-		"./lib/*": "./src/lib/*.ts",
-		"./globals.css": "./src/styles/globals.css",
-		"./postcss.config": "./postcss.config.mjs",
-		"./tailwind.config": "./tailwind.config.ts"
+		"shadcn": "npx shadcn@canary",
+		"lint": "eslint . --max-warnings 0"
 	},
 	"dependencies": {
 		"@radix-ui/react-accordion": "^1.2.2",
 		"@radix-ui/react-dropdown-menu": "^2.1.5",
 		"@radix-ui/react-slot": "^1.1.1",
-		"@tailwindcss/cli": "^4.0.1",
-		"@tailwindcss/postcss": "^4.0.1",
-		"autoprefixer": "^10.4.20",
-		"class-variance-authority": "^0.7.1",
+		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
-		"lucide-react": "^0.474.0",
-		"next-themes": "^0.4.4",
-		"postcss": "^8.5.1",
-		"tailwind-merge": "^2.6.0",
-		"tailwindcss": "^4.0.1",
+		"lucide-react": "0.456.0",
+		"next-themes": "^0.4.3",
+		"react": "^19.0.0",
+		"react-dom": "^19.0.0",
+		"tailwind-merge": "^2.5.4",
 		"tailwindcss-animate": "^1.0.7"
+	},
+	"devDependencies": {
+		"@workspace/eslint-config": "*",
+		"@workspace/typescript-config": "*",
+		"@turbo/gen": "^2.2.3",
+		"@types/node": "^22.9.0",
+		"@types/react": "18.3.0",
+		"@types/react-dom": "18.3.1",
+		"react": "^18.3.1",
+		"postcss": "^8.4.47",
+		"autoprefixer": "^10.4.20",
+		"tailwindcss": "^3.4.14",
+		"typescript": "^5.6.3"
+	},
+	"exports": {
+		"./globals.css": "./src/styles/globals.css",
+		"./postcss.config": "./postcss.config.mjs",
+		"./tailwind.config": "./tailwind.config.ts",
+		"./lib/*": "./src/lib/*.ts",
+		"./components/*": "./src/components/*.tsx",
+		"./hooks/*": "./src/hooks/*.ts"
 	}
 }
