fix(server): add bindings on routes

--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -9,22 +9,26 @@
   "scripts": {
     "hono:dev": "dotenv -e .env.local -e ../../packages/database/.env.local -- tsx watch src/index.ts --turbopack",
     "hono:staging": "dotenv -e .env.staging -e ../../packages/database/.env.staing -- tsx watch src/index.ts --turbopack",
-    "hono:build": "dotenv -e .env.production -e ../../packages/database/.env.production -- tsx src/index.ts --outDir dist"
+    "hono:build": "dotenv -e .env.production -e ../../packages/database/.env.production -- tsc",
+    "hono:deploy": "cdk deploy --app 'dotenv -e .env.production -e ../../packages/database/.env.production -- npx tsx cdk-app.ts'"
   },
   "dependencies": {
     "@hono/node-server": "^1.13.7",
     "@hono/swagger-ui": "^0.5.0",
     "@hono/zod-validator": "^0.4.2",
     "@node-rs/argon2": "^2.0.2",
+    "constructs": "^10.4.2",
     "hono": "^4.6.17",
     "nodemailer": "^6.10.0"
   },
   "devDependencies": {
-    "@workspace/eslint-config": "*",
-    "@workspace/typescript-config": "*",
-    "@workspace/mailer": "*",
     "@types/node": "^20.11.17",
+    "@types/nodemailer": "^6.4.17",
     "@types/pg": "^8.11.11",
+    "@workspace/eslint-config": "*",
+    "@workspace/mailer": "*",
+    "@workspace/typescript-config": "*",
+    "dotenv-cli": "^8.0.0",
     "tsx": "^4.19.2"
   }
 }
