feat(server): reset and forgot password api

--- a/apps/server/env.example
+++ b/apps/server/env.example
@@ -1,5 +1,13 @@
-SERVER_HOSTNAME=
+SERVER_HOSTNAME=localhost
+SERVER_VERSION=v1
 SERVER_PORT=4000
+
 ACCESS_TOKEN_SECRET=
 REFRESH_TOKEN_SECRET=
+RESET_TOKEN_SECRET=
 COOKIE_SECRET=
+
+SMTP_HOST=
+SMTP_PORT=
+SMTP_USER=
+SMTP_PASS=
