--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -10,7 +10,7 @@
 		"db:studio": "npx drizzle-kit studio",
 		"db:generate": "npx drizzle-kit generate",
 		"db:migrate": "tsx migrate.ts",
-		"db:push": "npx drizzle-kit push",
+		"db:push": "dotenv -e .env.local npx drizzle-kit push",
 		"db:build": "tsx src/index.ts"
 	},
 	"exports": {
@@ -25,6 +25,6 @@
 	"devDependencies": {
 		"@workspace/eslint-config": "*",
 		"@workspace/typescript-config": "*",
-		"drizzle-kit": "^0.30.3"
+		"drizzle-kit": "^0.30.4"
 	}
 }
