--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -12,21 +12,23 @@
     "hono:build": "NODE_ENV=production dotenv -e .env.production -e ../../packages/database/.env.production -- tsc"
   },
   "dependencies": {
+    "hono": "^4.6.17",
     "@hono/node-server": "^1.13.7",
     "@hono/swagger-ui": "^0.5.0",
+    "@hono/zod-openapi": "^0.18.4",
     "@hono/zod-validator": "^0.4.2",
+    "hono-openapi": "^0.4.4",
+    "@scalar/hono-api-reference": "^0.5.172",
     "@node-rs/argon2": "^2.0.2",
-    "constructs": "^10.4.2",
-    "hono": "^4.6.17",
     "nodemailer": "^6.10.0"
   },
   "devDependencies": {
-    "@types/node": "^20.11.17",
-    "@types/nodemailer": "^6.4.17",
-    "@types/pg": "^8.11.11",
     "@workspace/eslint-config": "*",
     "@workspace/mailer": "*",
     "@workspace/typescript-config": "*",
+    "@types/node": "^20.11.17",
+    "@types/nodemailer": "^6.4.17",
+    "@types/pg": "^8.11.11",
     "dotenv-cli": "^8.0.0",
     "tsx": "^4.19.2"
   }
