--- a/apps/server/tsconfig.json
+++ b/apps/server/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "@workspace/typescript-config/base.json",
   "compilerOptions": {
+    "strict": true,
     "outDir": "./dist",
     "module": "ESNext",
     "moduleResolution": "bundler",
