--- a/apps/storefront/tsconfig.json
+++ b/apps/storefront/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "@workspace/typescript-config/nextjs.json",
   "compilerOptions": {
+    "strict": true,
     "baseUrl": ".",
     "paths": {
       "@/*": ["./*"]
