--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -10,6 +10,7 @@
 	"dependencies": {
 		"@radix-ui/react-accordion": "^1.2.2",
 		"@radix-ui/react-dropdown-menu": "^2.1.5",
+		"@radix-ui/react-label": "^2.1.2",
 		"@radix-ui/react-slot": "^1.1.1",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
@@ -21,15 +22,15 @@
 		"tailwindcss-animate": "^1.0.7"
 	},
 	"devDependencies": {
-		"@workspace/eslint-config": "*",
-		"@workspace/typescript-config": "*",
 		"@turbo/gen": "^2.2.3",
 		"@types/node": "^22.9.0",
 		"@types/react": "18.3.0",
 		"@types/react-dom": "18.3.1",
-		"react": "^18.3.1",
-		"postcss": "^8.4.47",
+		"@workspace/eslint-config": "*",
+		"@workspace/typescript-config": "*",
 		"autoprefixer": "^10.4.20",
+		"postcss": "^8.4.47",
+		"react": "^18.3.1",
 		"tailwindcss": "^3.4.14",
 		"typescript": "^5.6.3"
 	},
