--- a/apps/storefront/package.json
+++ b/apps/storefront/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "next:dev": "dotenv -e ../../packages/database/.env.local -e ../server/.env.local  next dev --turbopack --port 3000",
-    "dev": "next dev",
+    "dev": "dotenv -e ../../packages/database/.env.local -e ../server/.env.local next dev",
     "next:build": "next build",
     "start": "next start",
     "lint": "next lint --max-warnings 0",
