--- a/apps/server/tsconfig.json
+++ b/apps/server/tsconfig.json
@@ -8,6 +8,7 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"],
+      "@/lib": ["./src/lib/*"],
       "@workspace/mailer/*": ["../../packages/mailer/src/*"]
     },
     "verbatimModuleSyntax": true,
