--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -6,11 +6,12 @@
   "exports": {
     "./apiRoutes": "./src/app.ts",
     "./schema": "./src/schema/index.ts",
-    "./lib/constants": "./src/lib/constants.ts"
+    "./lib/constants": "./src/lib/constants.ts",
+    "./lib/getTokenOptions": "./src/lib/getTokenOptions.ts"
   },
   "scripts": {
     "hono:dev": "NODE_ENV=development dotenv -e .env.local -e ../../packages/database/.env.local -- tsx watch src/index.ts --turbopack",
-    "hono:staging": "NODE_ENV=staging dotenv -e .env.staging -e ../../packages/database/.env.staing -- tsx watch src/index.ts --turbopack",
+    "hono:staging": "NODE_ENV=staging dotenv -e .env.staging -e ../../packages/database/.env.staging -- tsx watch src/index.ts --turbopack",
     "hono:build": "NODE_ENV=production dotenv -e .env.production -e ../../packages/database/.env.production -- tsc"
   },
   "dependencies": {
