--- a/apps/storefront/package.json
+++ b/apps/storefront/package.json
@@ -17,7 +17,8 @@
     "@workspace/server": "*",
     "@workspace/ui": "*",
     "lucide-react": "0.456.0",
-    "next": "^15.1.0",
+    "next": "^15.1.7",
+    "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
