--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -15,9 +15,10 @@
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
 		"lucide-react": "0.456.0",
-		"next-themes": "^0.4.3",
+		"next-themes": "^0.4.4",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
+		"sonner": "^1.7.4",
 		"tailwind-merge": "^2.5.4",
 		"tailwindcss-animate": "^1.0.7"
 	},
