--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -9,36 +9,35 @@
 	},
 	"dependencies": {
 		"@radix-ui/react-accordion": "^1.2.2",
-		"@radix-ui/react-dropdown-menu": "^2.1.5",
+		"@radix-ui/react-dropdown-menu": "^2.1.6",
+		"@radix-ui/react-slot": "^1.1.2",
 		"@radix-ui/react-label": "^2.1.2",
-		"@radix-ui/react-slot": "^1.1.1",
-		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
 		"lucide-react": "0.456.0",
 		"next-themes": "^0.4.4",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"sonner": "^1.7.4",
-		"tailwind-merge": "^2.5.4",
+		"tailwind-merge": "^3.0.1",
 		"tailwindcss-animate": "^1.0.7"
 	},
 	"devDependencies": {
+		"@workspace/eslint-config": "*",
+		"@workspace/typescript-config": "*",
 		"@turbo/gen": "^2.2.3",
 		"@types/node": "^22.9.0",
 		"@types/react": "18.3.0",
 		"@types/react-dom": "18.3.1",
-		"@workspace/eslint-config": "*",
-		"@workspace/typescript-config": "*",
 		"autoprefixer": "^10.4.20",
-		"postcss": "^8.4.47",
+		"@tailwindcss/postcss": "^4",
 		"react": "^18.3.1",
-		"tailwindcss": "^3.4.14",
+		"class-variance-authority": "^0.7.1",
+		"tailwindcss": "^4",
 		"typescript": "^5.6.3"
 	},
 	"exports": {
 		"./globals.css": "./src/styles/globals.css",
 		"./postcss.config": "./postcss.config.mjs",
-		"./tailwind.config": "./tailwind.config.ts",
 		"./lib/*": "./src/lib/*.ts",
 		"./components/*": "./src/components/*.tsx",
 		"./hooks/*": "./src/hooks/*.ts"
