--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -7,7 +7,7 @@
     "./apiRoutes": "./src/app.ts",
     "./schema": "./src/schema/index.ts",
     "./lib/constants": "./src/lib/constants.ts",
-    "./lib/getTokenOptions": "./src/lib/getTokenOptions.ts"
+    "./lib/getAuthTokenOptions": "./src/lib/getAuthTokenOptions.ts"
   },
   "scripts": {
     "hono:dev": "NODE_ENV=development dotenv -e .env.local -e ../../packages/database/.env.local -- tsx watch src/index.ts --turbopack",
@@ -15,23 +15,24 @@
     "hono:build": "NODE_ENV=production dotenv -e .env.production -e ../../packages/database/.env.production -- tsc"
   },
   "dependencies": {
-    "hono": "^4.6.17",
     "@hono/node-server": "^1.13.7",
     "@hono/swagger-ui": "^0.5.0",
     "@hono/zod-openapi": "^0.18.4",
     "@hono/zod-validator": "^0.4.2",
-    "hono-openapi": "^0.4.4",
-    "@scalar/hono-api-reference": "^0.5.172",
     "@node-rs/argon2": "^2.0.2",
-    "nodemailer": "^6.10.0"
+    "@scalar/hono-api-reference": "^0.5.172",
+    "hono": "^4.7.2",
+    "hono-openapi": "^0.4.4",
+    "nodemailer": "^6.10.0",
+    "zod-openapi": "^4.2.3"
   },
   "devDependencies": {
-    "@workspace/eslint-config": "*",
-    "@workspace/mailer": "*",
-    "@workspace/typescript-config": "*",
     "@types/node": "^20.11.17",
     "@types/nodemailer": "^6.4.17",
     "@types/pg": "^8.11.11",
+    "@workspace/eslint-config": "*",
+    "@workspace/mailer": "*",
+    "@workspace/typescript-config": "*",
     "dotenv-cli": "^8.0.0",
     "tsx": "^4.19.2"
   }
