--- a/apps/storefront/package.json
+++ b/apps/storefront/package.json
@@ -16,15 +16,16 @@
     "@workspace/mailer": "*",
     "@workspace/server": "*",
     "@workspace/ui": "*",
+    "js-cookie": "^2.2.1",
     "lucide-react": "0.456.0",
     "next": "^15.1.7",
-    "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.64.2",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "19.0.8",
     "@types/react-dom": "19.0.3",
