--- a/apps/storefront/package.json
+++ b/apps/storefront/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "next:dev": "dotenv -e ../../packages/database/.env.local -e ../server/.env.local  next dev --turbopack --port 3000",
+    "next:dev": "dotenv -e ../../packages/database/.env.local -e ../server/.env.local  next dev --port 3000",
     "dev": "dotenv -e ../../packages/database/.env.local -e ../server/.env.local next dev",
     "next:build": "next build",
     "start": "next start",
@@ -12,11 +12,11 @@
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
+    "@edge-runtime/cookies": "^6.0.0",
     "@tanstack/react-query": "^5.64.2",
     "@workspace/mailer": "*",
     "@workspace/server": "*",
     "@workspace/ui": "*",
-    "js-cookie": "^2.2.1",
     "lucide-react": "0.456.0",
     "next": "^15.1.7",
     "next-themes": "^0.4.3",
@@ -25,7 +25,6 @@
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.64.2",
-    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "19.0.8",
     "@types/react-dom": "19.0.3",
