--- a/turbo.json
+++ b/turbo.json
@@ -32,7 +32,7 @@
 		},
 		"hono:dev": {
 			"dependsOn": ["db:push"],
-			"inputs": ["$TURBO_DEFAULT$", ".env*"],
+			"inputs": ["$TURBO_DEFAULT$", ".env*", "./apps/server/.env*", "./packages/database/.env*"],
 			"outputs": ["dist/**"],
 			"cache": false,
 			"persistent": true
