--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -22,36 +22,35 @@
     "db:generate": "npx drizzle-kit generate --config=./database/drizzle.config.ts",
     "db:migrate": "tsx ./database/migrate.ts",
     "db:push": "npx drizzle-kit push --config=./database/drizzle.config.ts",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "npx tsc --noEmit"
   },
   "dependencies": {
+    "hono": "^4.7.2",
+    "hono-openapi": "^0.4.4",
+    "hono-pino": "^0.7.2",
     "@hono/node-server": "^1.13.7",
     "@hono/swagger-ui": "^0.5.0",
     "@hono/zod-openapi": "^0.18.4",
     "@hono/zod-validator": "^0.4.2",
     "@scalar/hono-api-reference": "^0.5.172",
+    "zod-openapi": "^4.2.3",
+    "nodemailer": "^6.10.0",
     "argon2-browser": "^1.18.0",
     "drizzle-orm": "^0.39.3",
-    "hono": "^4.7.2",
-    "hono-openapi": "^0.4.4",
-    "hono-pino": "^0.7.2",
-    "nodemailer": "^6.10.0",
     "pg": "^8.13.1",
     "pino": "^9.6.0",
     "pino-pretty": "^13.0.0",
     "postgres": "^3.4.5",
-    "stoker": "^1.4.2",
-    "zod-openapi": "^4.2.3"
+    "stoker": "^1.4.2"
   },
   "devDependencies": {
+    "@workspace/eslint-config": "*",
+    "@workspace/typescript-config": "*",
     "@cloudflare/workers-types": "^4.20250214.0",
     "@types/argon2-browser": "^1.18.4",
     "@types/node": "^20.11.17",
     "@types/nodemailer": "^6.4.17",
     "@types/pg": "^8.11.11",
-    "@workspace/eslint-config": "*",
-    "@workspace/mailer": "*",
-    "@workspace/typescript-config": "*",
     "dotenv-cli": "^8.0.0",
     "drizzle-kit": "^0.30.4",
     "tsx": "^4.19.2",
