feat(repo): improve auth flow via storefront middleware

--- a/apps/server/env.example
+++ b/apps/server/env.example
@@ -1,8 +1,13 @@
-SERVER_HOSTNAME=localhost
-SERVER_PORT=4000
+LOG_LEVEL=silent
+
+STOREFRONT_HOSTNAME=
+STOREFRONT_PORT=
+
+DATABASE_URL=
 
 ACCESS_TOKEN_SECRET=
 REFRESH_TOKEN_SECRET=
+EMAIL_VERIFY_TOKEN_SECRET=
 RESET_TOKEN_SECRET=
 COOKIE_SECRET=
 
