--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -11,9 +11,7 @@
   },
   "scripts": {
     "hono:deploy": "wrangler deploy --minify",
-    "hono:dev2": "wrangler dev",
-    "hono:dev": "NODE_ENV=development dotenv -e .env.local -- tsx watch src/index.ts --turbopack",
-    "hono:staging": "NODE_ENV=staging dotenv -e .env.staging -- tsx watch src/index.ts --turbopack",
+    "hono:dev": "wrangler dev",
     "hono:build": "NODE_ENV=production dotenv -e .env.production -- tsc",
     "db:build": "tsx src/index.ts",
     "db:dev": "tsx --watch",
@@ -25,35 +23,35 @@
     "typecheck": "npx tsc --noEmit"
   },
   "dependencies": {
-    "hono": "^4.7.2",
-    "hono-openapi": "^0.4.4",
-    "hono-pino": "^0.7.2",
     "@hono/node-server": "^1.13.7",
     "@hono/swagger-ui": "^0.5.0",
     "@hono/zod-openapi": "^0.18.4",
     "@hono/zod-validator": "^0.4.2",
     "@scalar/hono-api-reference": "^0.5.172",
-    "zod-openapi": "^4.2.3",
-    "nodemailer": "^6.10.0",
-    "argon2-browser": "^1.18.0",
+    "bcryptjs": "^3.0.2",
     "drizzle-orm": "^0.39.3",
+    "hono": "^4.7.2",
+    "hono-openapi": "^0.4.4",
+    "hono-pino": "^0.7.2",
+    "nodemailer": "^6.10.0",
     "pg": "^8.13.1",
     "pino": "^9.6.0",
     "pino-pretty": "^13.0.0",
     "postgres": "^3.4.5",
-    "stoker": "^1.4.2"
+    "stoker": "^1.4.2",
+    "zod-openapi": "^4.2.3"
   },
   "devDependencies": {
-    "@workspace/eslint-config": "*",
-    "@workspace/typescript-config": "*",
+    "wrangler": "^3.109.2",
     "@cloudflare/workers-types": "^4.20250214.0",
     "@types/argon2-browser": "^1.18.4",
     "@types/node": "^20.11.17",
     "@types/nodemailer": "^6.4.17",
     "@types/pg": "^8.11.11",
+    "@workspace/eslint-config": "*",
+    "@workspace/typescript-config": "*",
     "dotenv-cli": "^8.0.0",
     "drizzle-kit": "^0.30.4",
-    "tsx": "^4.19.2",
-    "wrangler": "^3.109.2"
+    "tsx": "^4.19.2"
   }
 }
