--- a/apps/server/tsconfig.json
+++ b/apps/server/tsconfig.json
@@ -18,7 +18,7 @@
     },
     "verbatimModuleSyntax": true,
     "experimentalDecorators": true,
-    "types": ["node"],
+    "types": ["node", "@cloudflare/workers-types/2022-08-04"],
     "jsx": "react-jsx",
     "jsxImportSource": "hono/jsx"
   },
