--- a/apps/storefront/package.json
+++ b/apps/storefront/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "next:dev": "dotenv -e ../../packages/database/.env.local -e ../server/.env.local  next dev --port 3000",
-    "dev": "dotenv -e ../../packages/database/.env.local -e ../server/.env.local next dev",
+    "next:dev": "NODE_TLS_REJECT_UNAUTHORIZED=0 dotenv -e ../../packages/database/.env.local -e ../server/.env.local next dev --port 3000",
+    "dev": "NODE_TLS_REJECT_UNAUTHORIZED=0 dotenv -e ../../packages/database/.env.local -e ../server/.env.local next dev",
     "next:build": "next build",
     "start": "next start",
     "lint": "next lint --max-warnings 0",
